--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         //提交注册
 
-        window.location.href = "https://w.url.cn/s/A243J6T";
+        window.location.href = "https://w.url.cn/s/AYH2b6D";
 
 
     }
